--- a/index.html
+++ b/index.html
@@ -7,7 +7,65 @@
     <title>Rocky Mountain Weather App</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <div class="container">
+      <div class="weather-app">
+        <form id="search-form" class="mb-3">
+          <div class="row">
+            <div class="col-9">
+              <input
+                type="search"
+                placeholder="Enter a city.."
+                class="form-control"
+                id="city-input"
+                autocomplete="off"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="search"
+                class="btn btn-primary w-100"
+              />
+            </div>
+          </div>
+        </form>
+
+        <div class="overview">
+          <h1 id="city"></h1>
+          <ul>
+            <li>Last updated: <span id="date"></span></li>
+            <li id="description"></li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Sunny"
+                  id="icon"
+                />
+                <div>
+                  <strong id="temperature"></strong>
+                  <span class="units">
+                    <a href="#" id="celsius-link" class="active">°C</a>|
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <small>
+          <a href="https://github.com/luceroveas/Rocky-Mountain-Weather-App" target="blank">
+            Open-source code</a>
+          This project was coded by Andrea Vea and hosted on <a href="https://singular-malabi-d88f37.netlify.app" target="blank"> Netifly </a> 
+        </small>
     <script src="src/app.js"></script>
   </body>
 </html>
