added the forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">
+                Thu
+                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" 
+                alt=""
+                width="36"
+                />
+                18 12
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <small>
           <a href="https://github.com/luceroveas/Rocky-Mountain-Weather-App" target="blank">
