Inject the forecast HTML from JavaScript

--- a/index.html
+++ b/index.html
@@ -67,26 +67,15 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">
-                Thu
-                <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" 
-                alt=""
-                width="36"
-                />
-                18 12
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+          <div class="weather-forecast" id="forecast"></div>
+        <footer>
         <small>
           <a href="https://github.com/luceroveas/Rocky-Mountain-Weather-App" target="blank">
             Open-source code</a>
           This project was coded by Andrea Vea and hosted on <a href="https://singular-malabi-d88f37.netlify.app" target="blank"> Netifly </a> 
         </small>
+        </footer>
+        </div>
     <script src="src/app.js"></script>
   </body>
 </html>
